--- a/renovate.json
+++ b/renovate.json
@@ -74,7 +74,7 @@
         },
         {
             "matchManagers": [
-                "helm"
+                "helmv3"
             ],
             "enabled": true,
             "commitMessageSuffix": "[Update Chart version]",
