--- a/charts/esphome/Chart.yaml
+++ b/charts/esphome/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: esphome
 description: esphome
 type: application
-version: 1.0.0-alpha
-appVersion: "2024.7.3"
+version: 1.0.0
+appVersion: "2024.10.2"
 keywords:
   - home-assistant
   - domotique
