--- a/renovate.json
+++ b/renovate.json
@@ -57,7 +57,7 @@
             "enabled": true,
             "bumpVersion": "minor",
             "versioning": "semver",
-            "fileMatch": ["^(?:app|version)"]
+            "fileMatch": ["^(?:appVersion|version)"]
         }
     ]
 }
