--- a/charts/servarr/values.yaml
+++ b/charts/servarr/values.yaml
@@ -150,7 +150,7 @@ lidarr:
   replicaCount: 1
   image:
     repository: lscr.io/linuxserver/lidarr
-    tag: "8.1.2135"
+    tag: "2.8.1"
   env:
     - name: PUID
       value: "1000"
@@ -182,7 +182,7 @@ lidarr:
     periodSeconds: 15
 
 ##############################
-########### RECYCARR ########
+########### RECYCLARR ########
 ##############################
 recyclarr:
   enabled: false
