--- a/renovate.json
+++ b/renovate.json
@@ -1,63 +1,47 @@
 {
     "extends": [
-        "config:recommended",
-        ":disableDependencyDashboard"
+      "config:recommended",
+      ":disableDependencyDashboard"
     ],
     "packageRules": [
-        {
-            "matchManagers": [
-                "helm-values"
-            ],
-            "matchDatasources": [
-                "docker"
-            ],
-            "enabled": true,
-            "automerge": true,
-            "automergeType": "pr",
-            "matchUpdateTypes": [
-                "patch"
-            ],
-            "prCreation": "immediate",
-            "bumpVersion": "minor",
-            "groupName": "Patch Updates",
-            "ignoreTests": true
-        },
-        {
-            "matchManagers": [
-                "helm-values"
-            ],
-            "matchDatasources": [
-                "docker"
-            ],
-            "enabled": true,
-            "matchUpdateTypes": [
-                "major",
-                "minor"
-            ],
-            "prCreation": "immediate",
-            "groupName": "Major/Minor Updates",
-            "ignoreTests": true
-        },
-        {
-            "matchManagers": [
-                "helmv3", "helm-values"
-            ],
-            "enabled": true,
-            "commitMessageSuffix": "[Update Chart version]",
-            "bumpVersion": "minor",
-            "prCreation": "immediate",
-            "automerge": true,
-            "automergeType": "pr",
-            "ignoreTests": true
-        },
-        {
-            "matchPaths": [
-                "Chart.yaml"
-            ],
-            "enabled": true,
-            "bumpVersion": "minor",
-            "versioning": "semver",
-            "fileMatch": ["^(?:appVersion|version)"]
-        }
+      {
+        "matchManagers": ["helm-values"],
+        "matchDatasources": ["docker"],
+        "enabled": true,
+        "automerge": true,
+        "automergeType": "branch",
+        "matchUpdateTypes": ["patch"],
+        "prCreation": "immediate",
+        "bumpVersion": "patch",
+        "groupName": "Patch Updates",
+        "ignoreTests": true
+      },
+      {
+        "matchManagers": ["helm-values"],
+        "matchDatasources": ["docker"],
+        "enabled": true,
+        "matchUpdateTypes": ["minor", "major"],
+        "prCreation": "immediate",
+        "groupName": "Minor and Major Updates",
+        "ignoreTests": true
+      },
+      {
+        "matchManagers": ["helmv3", "helm-values"],
+        "enabled": true,
+        "commitMessageSuffix": "[Update Chart version]",
+        "bumpVersion": "minor",
+        "prCreation": "immediate",
+        "automerge": true,
+        "automergeType": "pr",
+        "ignoreTests": true
+      },
+      {
+        "matchPaths": ["Chart.yaml"],
+        "enabled": true,
+        "bumpVersion": "minor",
+        "versioning": "semver",
+        "fileMatch": ["^(?:appVersion|version)"]
+      }
     ]
-}
+  }
+  
