--- a/renovate.json
+++ b/renovate.json
@@ -33,5 +33,10 @@
         "groupName": "Helm Chart Updates",
         "ignoreTests": true
       }
-    ]
+    ],
+     "postUpgradeTasks": {
+      "commands": [
+        "echo 'toto'"
+      ]
+    }
   }
