--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": ["config:recommended",":semanticCommits",":semanticCommitTypeAll(deps)",":semanticCommitScope(renovate)"],
+    "extends": ["config:recommended"],
     "packageRules": [
       {
         "matchManagers": ["helm-values"],
