--- a/charts/home-assistant/values.yaml
+++ b/charts/home-assistant/values.yaml
@@ -11,10 +11,6 @@ usbMount:
   enabled: false
   path: /dev/ttyACM0
 
-securityContext:
-  runAsUser: 1000
-  runAsGroup: 1000
-
 service:
   type: ClusterIP
   port: 8123
@@ -78,6 +74,13 @@ addons:
       enabled: false
       host: ""
       issuer: ""
+    resources:
+      requests:
+        memory: "256Mi"
+        cpu: "500m"
+      limits:
+        memory: "512Mi"
+        cpu: "1"
     env:
     - name: PUID
       value: "1000"
