--- a/charts/home-assistant/templates/codeserver-ingress.yaml
+++ b/charts/home-assistant/templates/codeserver-ingress.yaml
@@ -1,24 +1,15 @@
 {{- if .Values.addons.codeserver.ingress.enabled }}
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
 metadata:
   name: {{ template "home-assistant.fullname" . }}-codeserver
-  annotations:
-    cert-manager.io/cluster-issuer: {{ .Values.addons.codeserver.ingress.issuer }}
 spec:
-  tls:
-  - hosts:
-    - {{ .Values.addons.codeserver.ingress.host }}
-    secretName: codeserver-certificat-tls
-  rules:
-  - host: {{ .Values.addons.codeserver.ingress.host }}
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: {{ template "home-assistant.fullname" . }}-codeserver
-            port:
-              number: {{ .Values.addons.codeserver.service.port }}
+  entryPoints:
+    - websecure
+  routes:
+  - match: Host(`{{ .Values.addons.codeserver.ingress.host }}`)
+    kind: Rule
+    services:
+    - name: {{ template "home-assistant.fullname" . }}-codeserver
+      port: {{ .Values.addons.codeserver.service.port }}
 {{- end }}
