maj user codeserver

--- a/charts/home-assistant/templates/codeserver-deployment.yaml
+++ b/charts/home-assistant/templates/codeserver-deployment.yaml
@@ -29,6 +29,10 @@ spec:
       containers:
         - name: codeserver
           image: "{{ .Values.addons.codeserver.image }}:{{ .Values.addons.codeserver.tag }}"
+          {{- if .Values.usbMount.enabled }}
+          securityContext:
+            privileged: true
+          {{- end }}
           ports:
             - containerPort: {{ .Values.addons.codeserver.port }}
               name: codeserver
