--- a/charts/home-assistant/templates/codeserver-deployment.yaml
+++ b/charts/home-assistant/templates/codeserver-deployment.yaml
@@ -32,6 +32,7 @@ spec:
           {{- if .Values.usbMount.enabled }}
           securityContext:
             runAsUser: 0
+            privileged: true
           {{- end }}
           ports:
             - containerPort: {{ .Values.addons.codeserver.port }}
