--- a/charts/home-assistant/templates/home-assistant-deployment.yaml
+++ b/charts/home-assistant/templates/home-assistant-deployment.yaml
@@ -43,6 +43,8 @@ spec:
           env:
             - name: TZ
               value: {{ .Values.timezone }}
+            - name: UMASK
+              values: "000"
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
@@ -71,6 +73,11 @@ spec:
         - name: init-config
           image: busybox
           command: ['sh', '/config-script/init.sh']
+          env:
+            - name: TZ
+              value: {{ .Values.timezone }}
+            - name: UMASK
+              values: "000"
           volumeMounts:
             - mountPath: /config
               name: home-assistant-config
