--- a/charts/home-assistant/templates/codeserver-deployment.yaml
+++ b/charts/home-assistant/templates/codeserver-deployment.yaml
@@ -25,13 +25,16 @@ spec:
     spec:
       serviceAccountName: {{ include "home-assistant.serviceAccountName" . }}
       securityContext:
-        fsGroup: 1000
         {{- if .Values.usbMount.enabled }}
         runAsUser: 0
         {{- end }}
       containers:
         - name: codeserver
           image: "{{ .Values.addons.codeserver.image }}:{{ .Values.addons.codeserver.tag }}"
+          {{- if .Values.usbMount.enabled }}
+          securityContext:
+            privileged: true
+          {{- end }}
           ports:
             - containerPort: {{ .Values.addons.codeserver.port }}
               name: codeserver
@@ -42,7 +45,7 @@ spec:
               value: {{ .value | quote }}
             {{- end }}
             - name: TZ
-              value: {{ .Values.timezone }}
+              value: "{{ .Values.timezone }}"
             {{- if not .Values.usbMount.enabled }} 
             - name: PUID
               value: "1000"
