fix port ingress

--- a/charts/home-assistant/templates/home-assistant-ingress.yaml
+++ b/charts/home-assistant/templates/home-assistant-ingress.yaml
@@ -18,7 +18,7 @@ spec:
            pathType: Prefix
            backend:
              service:
-               name: http
+               name: {{ template "home-assistant.fullname" . }}
                port:
-                 name: {{ .Values.service.port }}
+                 name: http
 {{- end }}
