--- a/charts/home-assistant/templates/home-assistant-ingress.yaml
+++ b/charts/home-assistant/templates/home-assistant-ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
  name: {{ template "home-assistant.fullname" . }}
  annotations:
-   cert-manager.io/issuer: "{{ .Values.ingress.tls }}"
+   cert-manager.io/cluster-issuer: "{{ .Values.ingress.tls }}"
 spec:
  tls:
    - hosts:
