--- a/charts/home-assistant/templates/codeserver-ingress.yaml
+++ b/charts/home-assistant/templates/codeserver-ingress.yaml
@@ -1,17 +1,24 @@
 {{- if .Values.addons.codeserver.ingress.enabled }}
-apiVersion: traefik.io/v1alpha1
-kind: IngressRoute
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: {{ template "home-assistant.fullname" . }}-codeserver
+ name: {{ template "home-assistant.fullname" . }}-codeserver
+ annotations:
+   cert-manager.io/cluster-issuer: "{{ .Values.addons.codeserver.ingress.tls }}"
 spec:
-  entryPoints:
-    - websecure
-  routes:
-  - match: Host(`{{ .Values.addons.codeserver.ingress.host }}`)
-    kind: Rule
-    services:
-    - name: {{ template "home-assistant.fullname" . }}-codeserver
-      port: {{ .Values.addons.codeserver.service.port }}
-  tls:
-    secretName: {{ .Values.addons.codeserver.ingress.tls }}
+ tls:
+   - hosts:
+       - {{ .Values.addons.codeserver.ingress.host }}
+     secretName: tls-home-assistant-codeserver
+ rules:
+   - host: {{ .Values.addons.codeserver.ingress.host }}
+     http:
+       paths:
+         - path: /
+           pathType: Prefix
+           backend:
+             service:
+               name: {{ template "home-assistant.fullname" . }}-codeserver
+               port:
+                 name: codeserver
 {{- end }}
