--- a/charts/servarr/values.yaml
+++ b/charts/servarr/values.yaml
@@ -164,6 +164,9 @@ lidarr:
     enabled: false
     path: /config
     size: 1Gi
+  data:
+    path: /data
+    hostPath: /data
   port: 8686
   service:
     type: ClusterIP
