add ingress to prowlarr

--- a/charts/servarr/values.yaml
+++ b/charts/servarr/values.yaml
@@ -109,6 +109,10 @@ sonarr:
 prowlarr:
   enabled: false
   replicaCount: 1
+  ingress:
+    enabled: false
+    host: ""
+    tls: ""
   image:
     repository: lscr.io/linuxserver/prowlarr
     tag: "1.27.0"
