add ingress et capatibikity to loadbalencer ip

--- a/charts/jellyfin/templates/service.yaml
+++ b/charts/jellyfin/templates/service.yaml
@@ -6,6 +6,9 @@ metadata:
     {{- include "jellyfin.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
+  {{- with .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ . }}
+  {{- end }}
   ports:
   - name: http
     protocol: TCP
