--- a/charts/servarr/templates/codeserver/codeserver-ingress.yaml
+++ b/charts/servarr/templates/codeserver/codeserver-ingress.yaml
@@ -1,17 +1,17 @@
-{{- if .Values.codeserver.ingress.enabled }}
+{{- if .Values.addons.codeserver.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
  name: {{ include "servarr.fullname" . }}-codeserver
  annotations:
-   cert-manager.io/cluster-issuer: "{{ .Values.codeserver.ingress.tls }}"
+   cert-manager.io/cluster-issuer: "{{ .Values.addons.codeserver.ingress.tls }}"
 spec:
  tls:
    - hosts:
-       - {{ .Values.codeserver.ingress.host }}
+       - {{ .Values.addons.codeserver.ingress.host }}
      secretName: tls-codeserver
  rules:
-   - host: {{ .Values.codeserver.ingress.host }}
+   - host: {{ .Values.addons.codeserver.ingress.host }}
      http:
        paths:
          - path: /
