--- a/charts/servarr/templates/radarr/radarr-deployment.yaml
+++ b/charts/servarr/templates/radarr/radarr-deployment.yaml
@@ -33,10 +33,14 @@ spec:
           command: ['sh', '-c', 'until pg_isready -d radarr_main -U radarr -h {{ .Release.Name }}-cnpg-rw; do echo waiting for database; sleep 2; done;']
         - name: init-config
           image: busybox
-          command: ['sh', '-c', '[ ! -f /config/config.xml ] && cp /tmp/config.xml /config/config.xml && chown -R 1000:1000 /config']
+          command: ['sh', '/tmp/init.sh']
           volumeMounts:
             - name: config-volume
-              mountPath: /tmp
+              mountPath: /tmp/config.xml
+              subPath: config.xml
+            - name: script-volume
+              mountPath: /tmp/init.sh
+              subPath: init.sh
             - name: radarr-config
               mountPath: /config
       {{- end }}
@@ -82,6 +86,9 @@ spec:
         - name: config-volume
           configMap:
             name: config-radarr
+        - name: script-volume
+          configMap:
+            name: servarr-script
         {{- end }}
       {{- with .Values.radarr.nodeSelector }}
       nodeSelector:
